fixed border w and text alignment, and other minor things

--- a/app/assets/stylesheets/jcardsedit.css.scss
+++ b/app/assets/stylesheets/jcardsedit.css.scss
@@ -58,7 +58,16 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 223px;
+    width: 260px;
+    margin-top: 5px;
+
+    .btn {
+      width: 100px;
+    }
+  }
+  
+  .delete-btn {
+    width: 100px;
   }
   
   .row {
